--- a/package.json
+++ b/package.json
@@ -1,13 +1,21 @@
 {
-    "name": "chatUcrazy",
-    "main": "server.js",
-    "dependencies": {
-        "express": "~4.0.0",
-        "mongoose": "~3.6.13",
-        "request": "~2.72.0",
-        "body-parser": "~1.0.1"
-    },
-    "scripts": {
-      "start": "nodemon server.js"
-    }
+  "name": "chatUcrazy",
+  "main": "server.js",
+  "scripts": {
+    "start": "sudo nodemon server.js"
+  },
+  "dependencies": {
+    "express": "~4.0.0",
+    "mongoose": "~3.6.13",
+    "request": "~2.72.0",
+    "body-parser": "~1.0.1",
+    "eslint": "~2.8.0",
+    "gulp": "~3.9.1"
+  },
+  "devDependencies": {
+    "eslint-plugin-react": "~5.0.1",
+    "gulp-uglify": "~1.5.3",
+    "gulp-watch": "~4.3.5",
+    "gulp-replace": "~0.5.4"
+  }
 }
