--- a/package.json
+++ b/package.json
@@ -1,21 +1,35 @@
 {
   "name": "chatUcrazy",
+  "version": "1.1.0",
+  "description": "Chat bot of FB Messenger Platform",  
   "main": "server.js",
   "scripts": {
+    "test": "standard && nyc tap test/*.js",
+    "travis-coveralls": "nyc report --reporter=text-lcov | coveralls",
     "start": "sudo nodemon server.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/avence12/chatUcrazy.git"
+  },  
+  "author": "MinHsien Chang <avence12@gmail.com>",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/avence12/chatUcrazy/issues"
+  },  
+  "homepage": "https://www.lightblue.asia/projects/chatUcrazy",
   "dependencies": {
-    "express": "~4.0.0",
-    "mongoose": "~3.6.13",
-    "request": "~2.72.0",
-    "body-parser": "~1.0.1",
-    "eslint": "~2.8.0",
-    "gulp": "~3.9.1"
+    "express": "^4.13.4",
+    "request": "^2.72.0",
+    "mongoose": "^3.6.13",
+    "body-parser": "^1.15.0"
   },
   "devDependencies": {
-    "eslint-plugin-react": "~5.0.1",
-    "gulp-uglify": "~1.5.3",
-    "gulp-watch": "~4.3.5",
-    "gulp-replace": "~0.5.4"
+    "eslint-plugin-react": "^5.0.1",
+    "coveralls": "^2.11.9",
+    "nock": "^8.0.0",
+    "nyc": "^6.4.0",
+    "standard": "^6.0.8",
+    "tap": "^5.7.1"    
   }
 }
