fix nyc and tap dependencies

--- a/package.json
+++ b/package.json
@@ -1,35 +1,35 @@
 {
   "name": "chatUcrazy",
   "version": "1.1.0",
-  "description": "Chat bot of FB Messenger Platform",  
+  "description": "A chat bot for the Facebook Messenger Platform",
   "main": "server.js",
   "scripts": {
-    "test": "standard && nyc tap test/*.js",
+    "test": "nyc tap test/*.js",
     "travis-coveralls": "nyc report --reporter=text-lcov | coveralls",
-    "start": "sudo nodemon server.js"
+    "start": "sudo nodemon --harmony server.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/avence12/chatUcrazy.git"
-  },  
+  },
   "author": "MinHsien Chang <avence12@gmail.com>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/avence12/chatUcrazy/issues"
-  },  
+  },
   "homepage": "https://www.lightblue.asia/projects/chatUcrazy",
   "dependencies": {
+    "body-parser": "^1.15.0",
+    "cross-spawn-async": "^2.2.2",
     "express": "^4.13.4",
-    "request": "^2.72.0",
     "mongoose": "^3.6.13",
-    "body-parser": "^1.15.0"
+    "request": "^2.72.0"
   },
   "devDependencies": {
     "eslint-plugin-react": "^5.0.1",
     "coveralls": "^2.11.9",
     "nock": "^8.0.0",
-    "nyc": "^6.4.0",
-    "standard": "^6.0.8",
-    "tap": "^5.7.1"    
+    "nyc": "~6.4.0",
+    "tap": "~5.7.1"
   }
 }
